# OSIS-web

./: .gitignore  Cargo.toml  README.md
backend/: .env  Cargo.toml
backend/migrations/2022-10-11-124613_setup/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/api/: division.rs  image.rs  member.rs  mod.rs
backend/src/db/: division.rs  image.rs  member.rs  member.rs.orig  mod.rs  schema.rs
common/: Cargo.toml
common/src/: lib.rs  lib_BACKUP_787.rs  lib_BASE_787.rs
frontend/: Cargo.toml  index.html
frontend/sass/: main.sass
frontend/sass/about/: about.sass  article_list.sass  article_list_item.sass  content.sass  content_list.sass  main_content.sass
frontend/sass/enter_code/: enter_code.sass  enter_code_button.sass
frontend/sass/globals/: banner.sass  dim_page.sass  globals.sass  header.sass  item.sass  item_list.sass  learn_more_button.sass  nav.sass  rating.sass  sign_in_popup.sass  sign_up_button.sass  sign_up_form.sass  sign_up_today.sass  vars.sass  what_osis.sass  why_osis.sass
frontend/sass/home/: banner.sass  contacts.sass  faq.sass  faq_section.sass  home.sass  why_osis.sass  why_osis_section.sass
frontend/sass/landing/: banner_landing.sass  landing.sass  sign_up_button.sass  sign_up_today.sass  testimonies.sass  testimony.sass  why_osis.sass  why_osis_section.sass
frontend/sass/member/: description.sass  info.sass  member.sass
frontend/sass/member_list/: member_list.sass  member_list_item.sass
frontend/sass/sign_up_form/: sign_up_form.sass
frontend/src/: about.rs  backend.rs  home.rs  landing.rs  main.rs  member.rs  member_list.rs  sign_up_form.rs  utilities.rs
