[package]
name = "backend"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-web-lab = "0.18.2"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
common = { path = "../common" }
time = "0.3.15"
serde = { version = "1.0.145", features = ["derive"] }
actix-files = "0.6.2"
lettre = "0.10.1"
