[package]
name = "common"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["postgres_backend", "time"] }
actix-web = "4.2.1"
time = "0.3.15"
serde = { version = "1.0.145", features = ["derive"] }
