[package]
name = "frontend"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator = "0.16.0"
yew = "0.19.3"
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
yew-router = "0.16"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.33"
common = { path = "../common" }


